# fca-rust

./: Cargo.toml  LICENSE  readme.md
src/: formalconcept.rs  lib.rs  testdata.txt
